--- a/style.css
+++ b/style.css
@@ -1,15 +1,17 @@
 
 body {
-    background-color: rgb(248, 182, 243);
+    background-color: rgb(250, 214, 255);
     margin: 20px;
     text-align: justify;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family:'Satisfy', cursive;
     border-style: dotted; color: rgba(168, 1, 173, 0.541);
 }
 header {
     text-align: center;
     margin: 20px;
     padding: 20px;
+    position: sticky;
+    top:0;
 
 }
 
@@ -19,11 +21,10 @@ header {
 nav img{
     width: 30px;
 }
- 
 /* comentario igual JS. quando coloco um ponto, estou  a colocar uma classe, ex: */ 
 
 .logo{                          /*prestar atençao na classe no HTML*/
-    width: 50%;
+    width: 20%;
     max-width: 500px;
     min-width: 100px;
 }
@@ -35,21 +36,30 @@ nav {
 a{
     color: white;
     text-decoration: none;
+    text-shadow: 10px 10px rgb(88, 3, 173);
+}
+i{  
+    font-size: 50px;
 }
 span{
-    background-color: rgb(255, 0, 234); color: white;
+    background-color: rgb(145, 26, 137); color: white;
 }
-.redes-sociais {
-    width: 50px;
-}
+
+h1 {
+    display: inline-block;
+    margin: 0 0.5rem;
+    animation: bounce; /* referring directly to the animation's @keyframe declaration */
+    animation-duration: 7s; /* don't forget to set a duration! */
+  }
 main{
     text-align: justify; 
-    background-color:rgb(250, 211, 247)
+    background-color:rgb(250, 211, 247);    
 }
 footer{
     background-color: rgb(255, 0, 234);
     padding: 5px;
     margin: 10px;
     text-align: center;
-    text-decoration-color: blue;
+    position: sticky;
+    bottom: 0;
 }
